--- a/iaas/conf/example-account-secret.yaml
+++ b/iaas/conf/example-account-secret.yaml
@@ -1,9 +1,9 @@
 currency: "CNY"
 
-aws:
-  accounts:
-    - name: "test_a"
-      access_key_id: "key_test_a"
-      secret_access_key: "secret_key_a"
-      region: "cn-north-1"
-      services: ["ec2", "s3"]
+accounts:
+  test_a:
+    provider: "aws"
+    access_key_id: "key_test_a"
+    secret_access_key: "secret_key_a"
+    region: "cn-north-1"
+    services: ["ec2", "s3"]
