--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
         "eslint-plugin-react": "^7.6.1",
         "eslint-plugin-relay": "0.0.21",
         "ify-loader": "^1.1.0",
+        "jquery": "^3.3.1",
         "plotly.js": "^1.33.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-plotly.js": "^1.3.0",
+        "react-redux": "^5.0.6",
+        "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
+        "redux-promise": "^0.5.3",
+        "redux-thunk": "^2.2.0",
         "semantic-ui-react": "^0.78.2",
         "uglify-es": "^3.3.9",
         "uglifyjs-webpack-plugin": "^1.1.8",
