--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
         "eslint-plugin-relay": "0.0.21",
         "ify-loader": "^1.1.0",
         "jquery": "^3.3.1",
-        "plotly.js": "^1.33.1",
+        "randomcolor": "^0.5.3",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-plotly.js": "^1.3.0",
         "react-redux": "^5.0.6",
+        "recharts": "^1.0.0-beta.10",
         "redux": "^3.7.2",
         "redux-logger": "^3.0.6",
         "redux-promise": "^0.5.3",
